ingress/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
      - www.external.com
    secretName: secret-tls
  rules:
  - host: www.external.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-one
            port:
              number: 80
